# salvo-template

./: .gitignore  Cargo.toml  LICENSE  README.md
demo/: Cargo.toml
demo/src/: main.rs
toolbox/: Cargo.toml
toolbox/src/: lib.rs  resp.rs
toolbox/src/auth/: extractor.rs  jwt_config.rs  middleware.rs  mod.rs
toolbox/src/compare/: mod.rs
toolbox/src/global/: mod.rs
toolbox/src/logger/: message.rs  middleware.rs  mod.rs  output.rs
toolbox/src/macros/: err_resp.rs  impl_resp.rs  mod.rs
toolbox/src/validator/: extractor.rs  mod.rs
