[workspace]
members = ["demo", "toolbox"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.47.1" }
salvo = { version = "0.82.0" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.142" }
tracing = { version = "0.1.41" }
enum_dispatch = { version = "0.3.13" }
time = { version = "0.3.41" }
crossbeam-channel = { version = "0.5.15" }
percent-encoding = { version = "2.3.1" }
validator = { version = "0.20.0" }
jsonwebtoken = { version = "9.3.1" }
derive_more = { version = "2.0.1" }
