[package]
name = "toolbox"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
enum_dispatch = { workspace = true }
time = { workspace = true, features = ["local-offset"] }
crossbeam-channel = { workspace = true }
percent-encoding = { workspace = true }
validator = { workspace = true }
jsonwebtoken = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
